
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int close (int) ;
 int recv_sideband (char*,int,int) ;

__attribute__((used)) static int sideband_demux(int in, int out, void *data)
{
 int *xd = data;
 int ret;

 ret = recv_sideband("fetch-pack", xd[0], out);
 close(out);
 return ret;
}
